
  - New filter: CopyFlow Gold for QuarkXPress

  - OpenXML filter: New option to translate slide masters in PowerPoint documents

  - French localisation updated to 2.0 (UI)

----------------------------------------------------------------------
 OmegaT 1.8.1 update 2 Changes
----------------------------------------------------------------------
1.8.1 update 2 vs. 1.8.1 update 1

   1 Enhancement
   3 Bugfixes
----------------------------------------------------------------------
1.8.1 update 2

  Other enhancements:

  - Slovenian localisation updated to 1.8 (instant start, documentation)
  
  Bug fixes:
  
  - PL "Create new project" too large on OSX
  http://sourceforge.net/support/tracker.php?aid=1895406

  - The content of external TMX level 2 tags is displayed
  http://sourceforge.net/support/tracker.php?aid=1988491 

  - Spellcheck: words added to dictionary lost after restart
  http://sourceforge.net/support/tracker.php?aid=1819355  

----------------------------------------------------------------------
 OmegaT 1.8.1 update 1 Changes
----------------------------------------------------------------------
1.8.1 update 1 vs. 1.8.1

   3 Enhancements
   4 Bugfixes
----------------------------------------------------------------------
1.8.1 update 1

  Implemented requests:

  - PO: transform \t to tabs and back
  http://sourceforge.net/support/tracker.php?aid=2120936

  Other enhancements:
 
  - Japanese localisation updated to 1.8 (UI) 
  - Slovenian localisation updated to 1.8 (UI) 

  Bug fixes:

  - PowerPoint: Non translatable text (<p:attrName>) was visible in the editor

  - Various corrections in the manual

  - PO Filter: \ is doubled for \t
  http://sourceforge.net/support/tracker.php?aid=2149518

  - OpenXML filter: Newline (<w:br>) was not defined as a paragraph tag
  The change might require to revalidate the translation for some existing 
segments

----------------------------------------------------------------------
1.8.1 vs. 1.8.0 update 2
